# pam-auth

./: .containerignore  Cargo.toml  Containerfile  README.md  cackle.toml  justfile
.github/: dependabot.yml
.github/workflows/: cackle.yml  devskim.yml  docker-image.yml  rust-clippy.yml
pam-direct-fallback/: Cargo.toml
pam-direct-fallback/src/: args.rs  lib.rs  path.rs
pam-pin/: Cargo.toml
pam-pin/src/: args.rs  lib.rs
pam-utils/: Cargo.toml
pam-utils/src/: lib.rs
pin-data/: Cargo.toml
pin-data/src/: lib.rs
pin-gen/: Cargo.toml
pin-gen/src/: cli.rs  main.rs
ressources/: container_sh_history  direct-fallback-test  pin-test  sample-pins.toml
