[package]
name = "pam-direct-fallback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pamsm = { version = "0.5.2", features = ["libpam"] }
pam-utils = { path = "../pam-utils" }

[lib]
crate-type = ["cdylib"]
