[package]
name = "pam-direct-fallback"
authors = ["zSchoen <dev@zschoen.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pamsm = { version = "0.5.2", features = ["libpam"] }
pam-utils = { path = "../pam-utils" }
birdcage = { version = "0.2", optional = true }

[features]
default = ["sandbox"]
sandbox = ["dep:birdcage", "pam-utils/sandbox"]

[lib]
crate-type = ["cdylib"]
