[package]
name = "pam-pin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-data = { path = "../pin-data" }
argon2 = { version = "0.4.1", features = ["std"] }
pamsm = { version = "0.5.2", features = ["libpam"] }

[lib]
crate-type = ["cdylib"]
