[package]
name = "pam-pin"
authors = ["zSchoen <dev@zschoen.dev>"]
license = "GPL-3.0-only"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pamsm = { version = "0.5", features = ["libpam"] }
pam-utils = { path = "../pam-utils" }
pin-data = { path = "../pin-data" }
thiserror = "1"
error-stack = "0.4"
argon2 = { version = "0.5", features = ["std"] }
birdcage = { version = "0.4", optional = true }

[features]
default = ["sandbox"]
sandbox = ["dep:birdcage", "pam-utils/sandbox"]

[lib]
crate-type = ["cdylib"]
