[package]
name = "pin-data"
authors = ["zSchoen <dev@zschoen.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
toml = "0.5.9"
