[package]
name = "pin-data"
authors = ["zSchoen <dev@zschoen.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
toml = "0.7"
argon2 = { version = "0.5", features = ["std"] }
thiserror = "1"
error-stack = "0.4"
