[package]
name = "pin-gen"
authors = ["zSchoen <dev@zschoen.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-data = { path = "../pin-data" }
thiserror = "1"
error-stack = "0.4"
sysexits = "0.7"
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
rpassword = "7.2"
clap = { version = "3.2", features = ["derive"] }
birdcage = { version = "0.3", optional = true }

[features]
default = ["sandbox"]
sandbox = ["dep:birdcage"]
